--- a/Mars Fact.html
+++ b/Mars Fact.html
@@ -98,7 +98,7 @@
 
 </table>
 <br>
-<img src="images1/mars-v2.jpg" alt="">
+<img src="images1/mars-v2.jpg" alt="none">
     <br>
     <h2>
         Facts about Mars
